# klotzID

./: .gitignore  KlotzID.py  README.md  inflation_mh.P  lv_volume_inflation_ho.P  optimized_params.P  pyproject.toml  run_id.py  run_inflation.sh  volume_inflation.P  volume_inflation_ho.P  volume_inflation_ti.P  volume_inflation_ve.P
cheart_volume_calc/: boundaries.P  cheart_compute_bv_volume.P  prep.P  run_compute_volume.sh  volume_calculations.py
data/: ActCurve110.INIT  ActCurve48.INIT  ActCurve60.INIT  aha.FE  apex.FE  at60.FE  data.vtu  endo.FE  epi.FE  mid.FE  trans.FE  visualize_data.py
example/: boundaries.P  problem_fixed_com_base.P  problem_volume_calculation.P  run_id.py
invp/: Pres-0.D  Pres-1.D  Pres-10.D  Pres-11.D  Pres-12.D  Pres-13.D  Pres-14.D  Pres-2.D  Pres-3.D  Pres-4.D  Pres-5.D  Pres-6.D  Pres-7.D  Pres-8.D  Pres-9.D  volume_lv.norm  volume_rv.norm
mesh/: TP2base-TP2_solid.IN  TP2endo-TP2_solid.IN  lv_model_FE.B  lv_model_FE.NBT  lv_model_FE.PART  lv_model_FE.T  lv_model_FE.X  lv_model_disc1_FE.B  lv_model_disc1_FE.T  lv_model_disc_FE.B  lv_model_disc_FE.T  lv_model_disc_FE.X  lv_model_quad_FE.B  lv_model_quad_FE.T  lv_model_quad_FE.X  lv_model_quad_b.vtu  lv_model_quad_base_FE.B  lv_model_quad_base_FE.NBT  lv_model_quad_base_FE.PART  lv_model_quad_base_FE.T  lv_model_quad_base_FE.X  lv_model_quad_endo_FE.B  lv_model_quad_endo_FE.NBT  lv_model_quad_endo_FE.PART  lv_model_quad_endo_FE.T  lv_model_quad_endo_FE.X  mesh_info.P
out_mh/: Disp-10.D  Disp-100.D  Disp-20.D  Disp-30.D  Disp-40.D  Disp-50.D  Disp-60.D  Disp-70.D  Disp-80.D  Disp-90.D  (+230 more)
(+142 files in other folders)
